[package]
name = "xmz-test-tool"
version = "1.9.0"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Kalibrator Software für die CO/NO2 Kombisensoren mit Modbus Interface"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-TestToolS.git"
license = "GPL-2.0"
build = "build.rs"

[features]
# Development Environment, switch off fullscreen and some parts not present on dev maschines
development = []

[[bin]]
name = "xmz-test-tool"
path = "src/bin/main.rs"
doc = false

[dependencies]
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_16"] }
gtk-sys = { git = "https://github.com/gtk-rs/sys.git" }
libc = "*"
serde = "^0"
serde_derive = "^0"
serde_json = "^0"
sysfs_gpio = "^0"
rand = "^0"
